force-app/main/default/objects/cgcloud__Fund_Transaction_Row__c/cgcloud__Fund_Transaction_Row__c.object-meta.xml
<CustomObject>
    <description>Transaction Rows for the Funds.</description>
    <label>Fund Transaction Row</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Fund Transaction Row Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Transaction Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>