force-app/main/default/objects/cgcloud__Fund_Transaction_Row__c/fields/cgcloud__Currency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Currency__c</fullName>
    <formula>TEXT(cgcloud__Fund_Transaction__r.cgcloud__Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>