force-app/main/default/objects/cgcloud__Fund_Transaction_Row__c/fields/cgcloud__Fund_Transaction__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Transaction__c</fullName>
    <label>Fund Transaction</label>
    <referenceTo>cgcloud__Fund_Transaction__c</referenceTo>
    <relationshipLabel>Fund Transaction Rows</relationshipLabel>
    <relationshipName>Transaction_Rows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>