force-app/main/default/objects/cgcloud__Fund_Transaction_Row__c/fields/cgcloud__Source_Fund__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Fund</label>
    <referenceTo>cgcloud__Fund__c</referenceTo>
    <relationshipLabel>Fund Transaction Rows</relationshipLabel>
    <relationshipName>Transaction_Rows</relationshipName>
    <type>Lookup</type>
</CustomField>