force-app/main/default/objects/cgcloud__Fund_Transaction_Row__c/fields/cgcloud__Target_Fund__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target_Fund__c</fullName>
    <label>Target Fund</label>
    <referenceTo>cgcloud__Fund__c</referenceTo>
    <relationshipLabel>Fund Transaction Rows</relationshipLabel>
    <relationshipName>Transaction_Rows1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>