force-app/main/default/objects/cgcloud__Fund_Transaction_Row__c/fields/cgcloud__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Type__c</fullName>
    <description>This field identifies a Transaction row of type deposit or withdraw based on credit/debit transaction on the target fund of the record e.g. A negative transaction on the target fund identifies a transaction tow as Withdrawal type transaction.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>